Fix flipped cat drpdn arrow offset on mobile

--- a/hearth/media/css/lib.styl
+++ b/hearth/media/css/lib.styl
@@ -378,7 +378,7 @@ dropdown() {
     margin-left: 10px;
     pointer-events: none;
     position: absolute;
-    right: 5px;
+    right: 10px;
     top: 15px;
-    width: 30px;
+    width: 25px;
 }
